--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "ts-node": "~5.0.1",
     "typescript": "~4.6.2"
   }
 }
