--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@nrwl/angular": "^14.5.1",
     "dotenv": "^5.0.0",
     "firebase": "^9.6.11",
     "rxjs": "~7.5.0",
@@ -33,9 +34,9 @@
     "@angular-devkit/build-angular": "~13.3.3",
     "@angular/cli": "~13.3.3",
     "@angular/compiler-cli": "~13.3.0",
+    "@ngx-env/builder": "^2.0.2",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
-    "@ngx-env/builder": "^2.0.2",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
